--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "google",
     "reviews"
   ],
-  "author": "Kristoffer Tonning",
+  "author": "Laura Tonning",
   "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/astrogoat/google-reviews/issues"
